...
      return (key, JSON(value))
    default:
      return ("", JSON.null)
    }
  }
  
  /// If `type` is `.Array` or `.Dictionary`, return `array.isEmpty` or `dictonary.isEmpty` otherwise return `true`.
  public var isEmpty: Bool {
    get {
      switch self.type {
      case .Array:
        return self.rawArray.isEmpty
      case .Dictionary:
...
